<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Notifications for FB</string>

	<string name="request_pending">Request pending</string>
	<string name="could_not_get_notifications">Could not retrieve notifications</string>
	<string name="maybe_logged_out">Maybe you are logged out, please check</string>
	<string name="you_have">You have</string>
	<string name="new_friend_requests">friend request(s)</string>
	<string name="new_messages">new message(s)</string>
    <string name="new_groups">new group activity(es)</string>
	<string name="new_notifications">new notifications(s)</string>
	<string name="new_friend_requests_short">request(s)</string>
	<string name="new_messages_short">message(s)</string>
	<string name="new_notifications_short">notifications(s)</string>
	<string name="friends">Friends</string>
	<string name="messages">Messages</string>
    <string name="groups">Groups</string>
	<string name="notifications">Notifications</string>

	<string name="settings">Settings</string>
	<string name="enable_notification_synchro">Enable synchronization</string>
	<string name="notification_category_activate">Activate this category</string>
	<!--<string name="notification_sound">Notification sound</string>-->
	<string name="notification_sound_choice">Choose notification sound</string>
	<string name="notification_blink_rate">LED blink rate</string>
	<string name="notification_blink_rate_choice">Choose LED blink rate</string>
	<string name="update_interval">Update interval</string>
	<string name="enter_minutes">Approximate update time (in minutes)</string>
	<string name="update_interval_summary">Check for notifications every … minutes, from one minute to one week</string>
	<string name="update_interval_using_default">Invalid update interval, using default value: </string>
	<string name="update_interval_using_min">Update interval too short, using minimum value: </string>
	<string name="update_interval_using_max">Update interval too long, using maximum value: </string>
	<string name="notification_vibrate_choice">Vibration style</string>

	<string name="vibrate_none">No vibration</string>
	<string name="vibrate_short">Normal vibration</string>
	<string name="vibrate_long">Strong vibration</string>
	<string name="vibrate_double">Double vibration</string>
	<string name="vibrate_double_long">Strong double vibration</string>

	<string name="blink_slow">Slow</string>
	<string name="blink_normal">Normal</string>
	<string name="blink_frenetic">Frenetic</string>

	<string name="share">Share</string>
	<string name="open">Open in browser</string>
	<string name="quit">Quit</string>
    <string name="problems">Problems?</string>

    <string name="R.string.notif_channel_name">Notification</string>
	<string name="notif_channel_description">Notifications from Facebook</string>

	<string name="user_agent">Mozilla/5.0 (Linux; Android 7.0; Pixel C Build/NRD91D; wv) AppleWebKit/537.36 (KHTML, like Gecko) Version/4.0 Chrome/53.0.2785.124 Safari/537.36 [FB_IAB/FB4A;FBAV/98.0.0.18.70;]</string>

</resources>
