<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


	<CheckBoxPreference
		android:defaultValue="true"
		android:key="@string/enable_notification_synchro"
		android:title="@string/enable_notification_synchro"/>

	<EditTextPreference
		android:title="@string/update_interval"
        android:dialogTitle="@string/enter_seconds"
		android:summary="@string/update_interval_summary"
		android:key="@string/update_interval"
		android:defaultValue="5"
		android:inputType="number"
		/>

	<PreferenceCategory
		android:key="@string/friends"
		android:title="@string/friends">
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="notification_friends"
			android:title="@string/notification_category_activate"/>
		<RingtonePreference
			android:key="notification_sound_choice_friends"
			android:ringtoneType="notification"
			android:title="@string/notification_sound_choice"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="@string/messages"
		android:title="@string/messages">
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="notification_messages"
			android:title="@string/notification_category_activate"/>
		<RingtonePreference
			android:key="notification_sound_choice_messages"
			android:ringtoneType="notification"
			android:title="@string/notification_sound_choice"/>
	</PreferenceCategory>

	<PreferenceCategory
		android:key="@string/notifications"
		android:title="@string/notifications">
		<CheckBoxPreference
			android:defaultValue="true"
			android:key="notification_notifications"
			android:title="@string/notification_category_activate"/>
		<RingtonePreference
			android:key="notification_sound_choice_notifications"
			android:ringtoneType="notification"
			android:title="@string/notification_sound_choice"/>
	</PreferenceCategory>

</PreferenceScreen>