<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Share Button (Handled by ShareActionProvider) -->
    <item
        android:id="@+id/menu_item_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />

    <!-- Open in Browser -->
    <item
        android:id="@+id/menu_item_open_browser"
        android:icon="@android:drawable/ic_menu_view"
        android:title="Open in Browser"
        app:showAsAction="never" />

    <!-- Log Out -->
    <item
        android:id="@+id/menu_item_logout"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="Log Out"
        app:showAsAction="never" />

    <!-- Settings -->
    <item
        android:id="@+id/menu_item_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />

    <!-- Problems / Don't Kill My App -->
    <item
        android:id="@+id/menu_item_problems"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/problems"
        app:showAsAction="never" />

    <!-- Quit -->
    <item
        android:id="@+id/menu_item_quit"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/quit"
        app:showAsAction="never" />

</menu>
